# PiEEG-agent

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  brain_data_analysis.ipynb  install.cmd  install.sh  pyproject.toml  setup.sh  test_docs.py  zynd_wrapper.py
.githooks/: pre-commit
.github/workflows/: test.yml
docs/: llm-providers.md  pattern-health-ui.md  utility-tools.md
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx  socket.ts  styles.css  types.ts  util.ts
frontend/src/components/: BrainCards.tsx  CascadeMonitor.tsx  Chat.tsx  ConnectivityCard.tsx  ConversationList.tsx  Header.tsx  LLMSettings.tsx  LogsPanel.tsx  NotebookViewer.tsx  PatternModal.tsx  PatternTicker.tsx  SystemControl.tsx  Toast.tsx  TrainingOverlay.tsx  (+2 more)
pieeg_agent/: __init__.py  __main__.py  config.py
pieeg_agent/agent/: __init__.py  actuator_tools.py  context.py  copilot.py  decode_tools.py  doc_tools.py  session_rag.py  tools.py  utility_tools.py  web_tools.py
pieeg_agent/data/: README.md  openrouter_models.json
pieeg_agent/decode/: __init__.py  calibrate.py  classifier.py  connectivity.py  features.py  health.py  patterns.py  session.py  spectral.py  store.py  train.py
pieeg_agent/ingest/: __init__.py  lsl_inlet.py  ring.py
pieeg_agent/llm/: __init__.py  _http.py  anthropic.py  catalog.py  echo.py  factory.py  openai_compat.py  provider.py
pieeg_agent/perceive/: __init__.py  artifacts.py  cascade.py  events.py  features.py  quality.py  state.py
pieeg_agent/server/: __init__.py  actions.py  client.py  gate.py
pieeg_agent/web/: __init__.py  app.py  engine.py
scripts/: install-hooks.cmd  install-hooks.sh  update_models.py
tests/: test_actuator.py  test_artifacts.py  test_auto_fallback.py  test_catalog.py  test_connectivity.py  test_context_management.py  test_control_client.py  test_copilot.py  test_decode_pipeline.py  test_decode_tools.py  test_events.py  test_factory.py  test_features.py  test_gate.py  test_health.py  test_provider_wire.py  test_rate_limiting.py  test_ring.py  test_session.py  test_spectral.py  test_state.py  test_store.py  test_streaming.py  test_tools.py  test_utility_tools.py  test_web.py  test_web_tools.py
(+8 files in other folders)
