[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pieeg-agent"
version = "0.1.0"
description = "Natural language EEG lab notebook."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "PiEEG Community"},
]
keywords = ["eeg", "bci", "pieeg", "lsl", "agent", "llm", "anthropic",
            "neurofeedback", "brain-computer-interface"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
]
dependencies = [
    "numpy>=1.24",
    "pylsl>=1.16",
]

[project.optional-dependencies]
# The LLM adapters speak the providers' REST APIs over the standard library,
# so no vendor SDK is required to use Anthropic or any OpenAI-compatible
# backend. These extras are kept only for users who want the official SDKs
# available alongside the agent for their own scripts.
anthropic = [
    "anthropic>=0.40",
]
openai = [
    "openai>=1.30",
]
# PiEEG-server control-plane client (WebSocket :1616) — used from Phase 3.
server = [
    "websockets>=12.0",
]
# Graphical web UI (ChatGPT/Gemini-style) served by `pieeg-agent web`: a
# FastAPI backend that streams the same copilot, live brain state and pattern
# training over HTTP/WebSocket. The React/TS frontend is built separately with
# Node and served as static files; these are only the Python serving deps.
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "fastapi>=0.110",
    "httpx>=0.27",
]

[project.scripts]
pieeg-agent = "pieeg_agent.__main__:main"

[project.urls]
Homepage = "https://github.com/pieeg-club/PiEEG-agent"
Repository = "https://github.com/pieeg-club/PiEEG-agent"
Issues = "https://github.com/pieeg-club/PiEEG-agent/issues"

[tool.setuptools.packages.find]
include = ["pieeg_agent*"]
